// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deletes rollup uglify plugin using crafty.config.js 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/compiles-no-uglify/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
[__:__:__] Finished 'js_myTSBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Deletes rollup uglify plugin using crafty.config.js 2`] = `
"var C = /** @class */ (function () {
    function C() {
        /* eslint-disable-next-line no-console */
        console.log(\\"Something happens here\\");
    }
    C.prototype.someMethod = function () {
        /* eslint-disable-next-line no-alert */
        alert(\\"yes, alert still exists\\");
    };
    return C;
}());
var D = /** @class */ (function () {
    function D() {
        /* eslint-disable-next-line no-console */
        console.log(\\"Something else happens here\\");
    }
    D.prototype.someMethod = function () {
        /* eslint-disable-next-line no-alert */
        alert(\\"yes, alert still exists\\");
    };
    return D;
}());

export { C, D };
//# sourceMappingURL=myTSBundle.min.js.map
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stderr": "[js_myTSBundle] (!) Errors were found
js/typescript.ts
[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Error: Errors were found
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...

__PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/fails/js/typescript.ts
  14:0  error  Parsing error: Unexpected token. A constructor, method, accessor, or property was expected

✖ 1 problem (1 error, 0 warnings)

",
}
`;

exports[`Lints TypeScript with rollup 1`] = `
Object {
  "status": 1,
  "stderr": "[js_myBundle] (!) Errors were found
js/script.ts
[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Error: Errors were found
    ...stacktrace...
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...

__PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`         @swissquote/swissquote/prettier/prettier
   6:3   error    Replace \`··constructor·\` with \`constructor\`  @swissquote/swissquote/prettier/prettier
   7:5   warning  Unexpected console statement                 no-console
   8:2   error    Insert \`·\`                                   @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                 no-console
  11:17  error    Replace \`·test(·\` with \`test(\`               @swissquote/swissquote/prettier/prettier
  13:16  error    Replace \`·(·)·=>⏎···\` with \`()·=>\`           @swissquote/swissquote/prettier/prettier
  17:7   warning  Unexpected console statement                 no-console
  18:6   error    Replace \`·,·300)\` with \`,·300);\`             @swissquote/swissquote/prettier/prettier

✖ 9 problems (6 errors, 3 warnings)
  6 errors and 0 warnings potentially fixable with the \`--fix\` option.

",
}
`;

exports[`Works with rollup 1`] = `
Object {
  "status": 0,
  "stderr": "",
  "stdout": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-rollup/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
[__:__:__] Finished 'js_myTSBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Works with rollup 2`] = `
"var e=/** @class */function(){function e(){console.log(\\"Something happens here\\")}return e.prototype.someMethod=function(){alert(\\"yes, alert still exists\\")},e}(),t=/** @class */function(){function e(){console.log(\\"Something else happens here\\")}return e.prototype.someMethod=function(){alert(\\"yes, alert still exists\\")},e}();export{e as C,t as D};
//# sourceMappingURL=myTSBundle.min.js.map
"
`;
